--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-slate
 
-title: Jie DU asdfasdf
-description: [personal website]
-show_downloads: [false]
+title: Jie DU
+description: personal website
+show_downloads: false
