--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-slate
 
 title: [Jie DU]
-description: [Yau Mathematical Sciences Center, Tsinghua University.]
+description: [Yau Mathematical Sciences Center]
+description: [Tsinghua University.]
