--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-slate
 
-title: Jie DU
-description: 杜洁
+title: Jie DU (杜洁)
+description: Assistant Professor／Yau Mathematical Sciences Center／Tsinghua University
