Set theme jekyll-theme-minimal

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
 
 title: Jie DU (杜洁)
 description: Assistant Professor／Yau Mathematical Sciences Center／Tsinghua University
