--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
-theme: jekyll-theme-leap-day
-
+remote_theme: "mmistakes/so-simple-theme"
 title: Jie DU (杜洁)
 description: Assistant Professor／Yau Mathematical Sciences Center／Tsinghua University
