--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-remote_theme: "mmistakes/so-simple-theme"
+theme: jekyll-theme-leap-day
 title: Jie DU (杜洁)
 description: Assistant Professor／Yau Mathematical Sciences Center／Tsinghua University
