--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: Jie DU (杜洁)
-description: Assistant Professor／Yau Mathematical Sciences Center／Tsinghua University
+description: Research Fellow／School of Mathematical Sciences／East China Normal University
